--- a/src/data/levels/05b_PPU/19_Mirroring 1-2 - Palette RAM/chat/es.yml
+++ b/src/data/levels/05b_PPU/19_Mirroring 1-2 - Palette RAM/chat/es.yml
@@ -1,7 +1,7 @@
 main:
   messages:
   - acceder a la Palette RAM es un poco raro en la NEEES
-  - algunas direcciones son espejos de otras direcciones
+  - algunas direcciones son espejos de otras direcciones 🚽
   - arreglémoslo rápidamente
   - |-
     📚  _-_en `PPUMemory`, busca la sección _--_🎨 _-_  ~Palette RAM~ en `read(...)` y reemplázala con este código:
