--- a/src/data/levels/05b_PPU/19_Mirroring 2-2 - Name tables/chat/es.yml
+++ b/src/data/levels/05b_PPU/19_Mirroring 2-2 - Name tables/chat/es.yml
@@ -1,4 +1,87 @@
 main:
   messages:
-  - coming soon!
+  - el mapa de memoria de la PPU tiene una sección dedicada para 4 name tables, en ~PPU $2000-$2FFF~
+  - cada name table es de 1024 bytes (o $400 en hexadecimal), por lo que estas 4 tablas están en las direcciones $2000, $2400, $2800 y $2C00
+  - pero el hardware real de la NEEES solo tiene VRAM para <dos> de ellas
+  - lo que termina sucediendo es que el mapper espeja las otras de formas divertidas ✨
+  - y ese espejado ("mirroring") es útil para que los juegos implementen scrolling
+  - revisémoslas
+  responses:
+  - genial, a ver 👀 [show]
+
+show:
+  messages:
+  - llamemos a las name tables "físicas" (las que realmente podemos almacenar en VRAM) "A" y "B"
+  - el mirroring "HORIZONTAL" conecta $2000 y $2400 a la primera name table física ("A") y $2800 y $2C00 a la segunda name table física ("B")
+  - <{horizontal.png}>
+  - ¿entiendes? están reflejadas horizontalmente 😉
+  responses:
+  - ¡sí! [vertical]
+
+vertical:
+  messages:
+  - el mirroring "VERTICAL" conecta $2000 a "A" y $2400 a "B", luego repite todo en $2800 y $2C00"
+  - <{vertical.png}>
+  - y ahora están reflejadas verticalmente 😊
+  responses:
+  - claro [single]
+
+single:
+  messages:
+  - también hay juegos que usan una única name table, repetida 4 veces (dejando la otra name table física sin usar)
+  - <{single.png}>
+  - dependiendo del mapper, esto también podría ser "B" cuatro veces
+  - llamamos al primero "ONE_SCREEN_LOWER_BANK" y al segundo "ONE_SCREEN_UPPER_BANK"
+  responses:
+  - tiene sentido [fourscreen]
+
+fourscreen:
+  messages:
+  - finalmente, hay algunos cartuchos de juegos que contienen RAM extra para 2 name tables físicas adicionales
+  - lo que les permite usar una configuración "FOUR_SCREEN"
+  - <{4screen.png}>
+  - esta es la razón por la que definimos nuestra propiedad `vram` como un array de 4096 bytes en `PPUScreen`
+  responses:
+  - implementemos esto [implement]
+
+implement:
+  messages:
+  - traduje los tipos de mapeo en una linda tabla aquí 📄  ~/lib/ppu/mirroringTypes.js~
+  - las claves (`$2000`, `$2400`, `$2800` y `$2C00`) representan las direcciones lógicas de la PPU
+  - y los valores (principalmente `0x000` y `0x400`) son los desplazamientos de las name tables físicas dentro del array `PPUMemory::vram`
+  - 📚  _-_en `PPUMemory`, importa el archivo `mirroringTypes`_--_
+  - |-
+    📚  _-_define este método:_--_
+    *_-_*changeNameTableMirroringTo(mirroringId)**:_--_
+      *_-_*->** si ~this.cartridge.header.mirroringId === "FOUR_SCREEN"~_--_
+        *_-_*->** asigna ~mirroringId = "FOUR_SCREEN"~_--_
+      *_-_*->** asigna ~this.mirroringId = mirroringId~_--_
+      *_-_*->** asigna ~this._mirroring = mirroringTypes[mirroringId]~_--_
+      _-_(los mappers llamarán a este método para cambiar el tipo de mirroring cuando lo necesiten)_--_
+  - 📚  _-_cambia `onLoad(...)` para que llame al nuevo método con el mirroring inicial (recuerda que esto está guardado en `cartridge.header.mirroringId`)_--_
+  - 📚  _-_mapea los rangos $2000-$23FF, $2400-$27FF, $2800-$2BFF y $2C00-$2FFF a VRAM, basado en el `mirroring` actual (tanto lecturas como escrituras)_--_
+  responses:
+  - ¿por ejemplo? 🧐 [example]
+
+example:
+  messages:
+  - busca la sección "Name tables 0 to 3 (VRAM + mirror)" en ambos métodos `read(...)` y `write(...)`
+  - |-
+    actualmente, `read(...)` debería verse así:
+    ```javascript
+    if (address >= 0x2000 && address <= 0x2fff)
+      return this.vram[address - 0x2000];
+    ```
+  - necesitas mapear las 4 secciones según a dónde apunte `this._mirroring`
+  - |-
+    implementemos los primeros dos casos
+    ```javascript
+    if (address >= 0x2000 && address <= 0x2fff) {
+      if (address >= 0x2000 && address < 0x2400)
+        return this.vram[this._mirroring.$2000 + (address - 0x2000)];
+      if (address >= 0x2400 && address < 0x2800)
+        return this.vram[this._mirroring.$2400 + (address - 0x2400)];
+      // TODO: ¡Termina los demás!
+    }
+    ```
   responses: []
