--- a/src/data/levels/05b_PPU/19_Mirroring 2-2 - Name tables/chat/en.yml
+++ b/src/data/levels/05b_PPU/19_Mirroring 2-2 - Name tables/chat/en.yml
@@ -8,6 +8,7 @@ main:
   - let's review them
   responses:
   - cool, show me 👀 [show]
+  - <<level.isCompleted || m.$exercise>> 📚  take me to the action [implement]
 
 show:
   messages:
@@ -45,6 +46,8 @@ fourscreen:
   - let's implement this [implement]
 
 implement:
+  run: |
+    set((m) => m.$exercise = true);
   messages:
   - I translated the mapping types into a nice table, here 📄  ~/lib/ppu/mirroringTypes.js~
   - the keys (`$2000`, `$2400`, `$2800` and `$2C00`) represent the logical PPU addresses
