--- a/src/data/levels/05b_PPU/09_Backgrounds 1-2 - Drawing Name tables/chat/es.yml
+++ b/src/data/levels/05b_PPU/09_Backgrounds 1-2 - Drawing Name tables/chat/es.yml
@@ -61,7 +61,7 @@ help:
   messages:
   - sabes que ~y = this.ppu.scanline~
   - y que necesitas dibujar desde ~x = 0~ hasta ~x = 255~
-  - también sabes que la pantalla es una cuadrícula de ~32x32~ tiles (de ~8x8~ píxeles cada una)
+  - también sabes que la pantalla es una cuadrícula de ~32x32~ tiles (de ~8x8~ píxeles cada uno)
   - y por último, ¡sabes cómo dibujar un tile usando tu clase `Tile`!
   - |-
     una forma de implementar esto es hacer algo como:
@@ -79,7 +79,7 @@ help:
         const tile = new Tile(this.ppu, patternTableId, tileId, y % 8);
         for (let xx = 0; xx < 8; xx++) {
           const colorIndex = tile.getColorIndex(xx);
-          // TODO: Plotear
+          // TODO: Plotear cada pixel del tile
         }
       }```
   responses:
