FIX: Adding missing NMI check

--- a/src/data/levels/05b_PPU/07_VBlank detection/chat/en.yml
+++ b/src/data/levels/05b_PPU/07_VBlank detection/chat/en.yml
@@ -45,6 +45,7 @@ interrupts:
     *_-_*_onVBlankLine(onInterrupt)**:_--_
       *_-_*->** if ~this.cycle~ is 1:_--_
         *_-_*->** sets ~this.registers.ppuStatus.isInVBlankInterval = 1~_--_
-        *_-_*->** calls ~onInterrupt(interrupts.NMI)~_--_
+        *_-_*->** if ~this.registers.ppuCtrl.generateNMIOnVBlank~:_--_
+          *_-_*->** calls ~onInterrupt(interrupts.NMI)~_--_
           _-_(you need to import it from _--_📄 _-_ ~/lib/interrupts.js~_--_)_--_
   responses: []
