--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "escape-string-regexp": "^5.0.0",
     "eslint-linter-browserify": "^9.13.0",
     "eventemitter3": "^4.0.7",
+    "globals": "^15.12.0",
     "history": "^4.10.1",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
