--- a/src/data/levels/05b_PPU/21_Scrolling 1-2 - The Bad Way/chat/es.yml
+++ b/src/data/levels/05b_PPU/21_Scrolling 1-2 - The Bad Way/chat/es.yml
@@ -109,8 +109,7 @@ then:
       const scrolledY = y + scrollY;
       // dirección de la name table base:
       const nameTableId = this.ppu.registers.ppuCtrl.nameTableId;
-      const scrolledNameTableId = nameTableId + Math.floor(scrolledX / 256) + Math.floor(scrolledY / 240) * 2;
-      const nameTableAddress = 0x2000 + scrolledNameTableId * 1024;
+      const nameTableAddress = 0x2000 + nameTableId * 1024;
       // punto actual, relativo a la name table:
       const nameTableX = scrolledX % 256;
       const nameTableY = scrolledY % 240;```
